@@ -8,16 +8,20 @@ import java.io.IOException;
 import java.security.GeneralSecurityException;
 import java.security.spec.KeySpec;
 
+import java.util.Base64;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.PBEParameterSpec;
 
+import org.castor.core.util.Base64Encoder;
 import org.lexevs.logging.Logger;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
+import java.util.Base64.Encoder;
+import java.util.Base64.Decoder;
 
 /**
  * The Class CryptoUtility.
@@ -63,7 +67,9 @@ public final class CryptoUtility {
         }
         
 //        return new String(encode(cipherBytes));
-        return new String(new BASE64Encoder().encode(cipherBytes));
+//        return new String(new BASE64Encoder().encode(cipherBytes));
+        Base64.Encoder encoder = Base64.getEncoder();
+        return new String(encoder.encode(cipherBytes));
     }
  
     /**
@@ -81,15 +87,17 @@ public final class CryptoUtility {
 //        byte[] decodedBytes = decode(ciphertext);
         
         try {
-            byte[] decodedBytes = new BASE64Decoder().decodeBuffer(ciphertext);
+//            byte[] decodedBytes = new BASE64Decoder().decodeBuffer(ciphertext);
+            Base64.Decoder decoder= java.util.Base64.getDecoder();
+            byte[] decodedBytes = decoder.decode(ciphertext);
             Cipher cipher = Cipher.getInstance("PBEWithMD5AndDES");
             cipher.init(Cipher.DECRYPT_MODE, getKey(), parameterSpec);
             result = new String(cipher.doFinal(decodedBytes));
             return result;
         } catch (GeneralSecurityException e) {
             log.fatal("Error on passowrd decryption.", e);
-        } catch (IOException e) {
-            e.printStackTrace();
+//        } catch (IOException e) {
+//            e.printStackTrace();
         }
         return result;
     }
